# AiProjects

./: README.md
agent-search/: .env.example  .gitignore  README.md  demo.py
agent-search/apps/api/: pyproject.toml  requirements.txt
agent-search/apps/api/app/: __init__.py  config.py  embeddings.py  llm.py  memory.py  schemas.py
agent-search/apps/api/app/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
agent-search/apps/api/app/api/: __init__.py
agent-search/apps/api/app/retrieval/: __init__.py  local_rag.py  openalex.py
agent-search/scripts/: build_index.py
