[project]
name = "agent-search-api"
version = "0.1.0"
description = "Agent Search 后端：FastAPI + LangGraph + OpenAlex"
requires-python = ">=3.11"

# 依赖说明：
#   fastapi / uvicorn：HTTP + ASGI 服务器
#   httpx：异步 HTTP 客户端，用于调用 OpenAlex / LLM
#   openai：LLM 客户端（OpenAI 兼容接口，适配 DeepSeek / vLLM / OpenAI）
#   langgraph：Agent 状态机编排
#   pydantic / pydantic-settings：配置 & Schema
#   sse-starlette：SSE 流式响应封装
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "openai>=1.40",
    "langgraph>=0.2.50",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
